# JetBrainsRuntime

./: .gitignore  .hgtags  FIXUP_TEST.txt  README.JAVASE  README.MD  README.md  REBASE_TEST.txt  fix_compile_commands.py  jbr_file_list.txt  jbr_file_list_linux.txt  jbr_file_list_osx.txt  jbr_file_list_windows.txt  modules.list  my_configure.sh  p.txt  plan0.md  plan1.md  run_jtreg_test.sh  runme.sh
.github/: README.JAVASE  README.md
.github/scripts/: gen-test-results.sh
.github/workflows/: build-cross-compile.yml  build-linux.yml  build-macos.yml  build-windows.yml  main.yml  pr.yml  submit.yml  test.yml
.jcheck/: conf
common/autoconf/: basics.m4  generated-configure.sh  lib-freetype.m4  spec.gmk.in  toolchain.m4  version-numbers
common/conf/: jib-profiles.js
doc/: building.html  building.md  testing.html  testing.md
hotspot/test/: jbProblemList.txt
jb/: README.md  branchdiff.py  generate-wakefield.sh  jdkdiff.py
jb/project/: java-common.cmake
jdk/test/: TEST.ROOT  TEST.groups  jbProblemList.txt
make/: Bundles.gmk  CompileDemos.gmk  CompileJavaModules.gmk  CompileToolsJdk.gmk  CopyImportModules.gmk  Coverage.gmk  CreateBuildJdkCopy.gmk  CreateJmods.gmk  Docs.gmk  GenerateLinkOptData.gmk  Help.gmk  Images.gmk  Init.gmk  InitSupport.gmk  JBRApi.gmk  MacBundles.gmk  Main.gmk  MainSupport.gmk  ModuleWrapper.gmk  RunTests.gmk  RunTestsPrebuilt.gmk  RunTestsPrebuiltSpec.gmk  SourceRevision.gmk  StaticLibs.gmk  TestImage.gmk  ToolsJdk.gmk  UpdateBuildDocs.gmk  ZipSecurity.gmk  ZipSource.gmk
make/autoconf/: basic.m4  basic_tools.m4  basic_windows.m4  basics.m4  basics_windows.m4  boot-jdk.m4  bootcycle-spec.gmk.in  build-performance.m4  buildjdk-spec.gmk.in  compare.sh.in  configure  configure.ac  flags-cflags.m4  flags-ldflags.m4  flags-other.m4  flags.m4  help.m4  hotspot.m4  jdk-options.m4  jdk-version.m4  jvm-features.m4  lib-at-spi2-atk.m4  lib-atk.m4  lib-bundled.m4  lib-dbus.m4  lib-ffi.m4  lib-freetype.m4  lib-glib.m4  lib-glibconfig.m4  lib-gobject.m4  lib-nvdacontrollerclient.m4  lib-speechd.m4  lib-tests.m4  lib-vulkan.m4  lib-wayland.m4  lib-x11.m4  libraries.m4  platform.m4  spec.gmk.in  spec.gmk.template  (+7 more)
make/clion/template/: CMakeLists.txt
make/common/: FindTests.gmk  JarArchive.gmk  JavaCompilation.gmk  JdkNativeCompilation.gmk  MakeBase.gmk  MakeIO.gmk  Modules.gmk  NativeCompilation.gmk  ProcessMarkdown.gmk  SetupJavaCompilers.gmk  TestFilesCompilation.gmk  TextFileProcessing.gmk  Utils.gmk  ZipArchive.gmk
make/conf/: github-actions.conf  jib-profiles.js  module-loader-map.conf  test-dependencies  version-numbers.conf
make/copy/: Copy-java.base.gmk  Copy-java.desktop.gmk  CopyCommon.gmk
make/devkit/: Tools.gmk  createWindowsDevkit2017.sh  createWindowsDevkit2019.sh
make/gendata/: Gendata-java.base.gmk  GendataBlockedCerts.gmk  GendataTZDB.gmk
make/gensrc/: Gensrc-jdk.internal.vm.compiler.gmk  Gensrc-jdk.internal.vm.compiler.management.gmk  GensrcCharacterData.gmk  GensrcCharsetCoder.gmk  GensrcCommonLangtools.gmk  GensrcLocaleData.gmk  GensrcMisc.gmk  GensrcModuleInfo.gmk  GensrcProperties.gmk  GensrcVarHandles.gmk
make/idea/: idea.gmk
make/launcher/: Launcher-java.base.gmk  Launcher-java.rmi.gmk  Launcher-java.scripting.gmk  Launcher-java.security.jgss.gmk  Launcher-jdk.aot.gmk  Launcher-jdk.compiler.gmk  Launcher-jdk.hotspot.agent.gmk  Launcher-jdk.jartool.gmk  Launcher-jdk.javadoc.gmk  Launcher-jdk.jcmd.gmk  Launcher-jdk.jconsole.gmk  Launcher-jdk.jdeps.gmk  Launcher-jdk.jdi.gmk  Launcher-jdk.jlink.gmk  Launcher-jdk.jshell.gmk  Launcher-jdk.jstatd.gmk  Launcher-jdk.pack.gmk  Launcher-jdk.rmic.gmk  Launcher-jdk.scripting.nashorn.shell.gmk  LauncherCommon.gmk
make/lib/: Awt2dLibraries.gmk  CoreLibraries.gmk  Lib-java.base.gmk  Lib-java.desktop.gmk  Lib-java.instrument.gmk  Lib-java.security.jgss.gmk  Lib-jdk.accessibility.gmk  Lib-jdk.hotspot.agent.gmk  Lib-jdk.jdi.gmk  Lib-jdk.jdwp.agent.gmk  Lib-jdk.management.gmk  Lib-jdk.sctp.gmk  LibCommon.gmk
make/scripts/: compare.sh  extract-vs-env.cmd  fixpath.sh
make/test/: BuildFailureHandler.gmk  BuildTestLib.gmk  JtregNativeHotspot.gmk  JtregNativeJdk.gmk
src/java.desktop/share/native/libwakefield/: CMakeLists.txt  README.md
src/java.desktop/share/native/libwakefield/protocol/: wakefield.xml
src/java.desktop/share/native/libwakefield/src/: wakefield.c
test/: TestCommon.gmk
(+8959 files in other folders)
